Add rest endpoint to retrieve job executions. Create empty service for retrieving jobs on frontend Add --enable-preview compiler key to get 'record' keyword workable