@@ -19,6 +19,10 @@ repositories {
     mavenLocal()
 }
 
+compileJava {
+    options.compilerArgs += ['--enable-preview']
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-batch'
